escape a menu item starting with a hyphen (carbon wants to make it a separator) with a zero-width space (bug 164155, r=pink, sr=bryner)